Add Oliver Terbu, Timothée Haudebourg as editors.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
         }, {
           name: "Tobias Looker", url: "https://www.linkedin.com/in/tplooker/",
           company: "MATTR", companyURL: "https://mattr.global/"
+        }, {
+          name: "Timothée Haudebourg", url: "https://github.com/timothee-haudebourg/",
+          company: "Spruce Systems, Inc.", companyURL: "https://spruceid.com/"
+        }, {
+          name: "Oliver Terbu", url: "https://github.com/awoie",
+          company: "Spruce Systems, Inc.", companyURL: "https://spruceid.com/"
         }],
 
         // extend the bibliography entries
