Move name/image/desc/url to top-level. Scope driversLicense.

--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@ Compatability with the W3C Verifiable Credentials data model.
   "description": "Susan Turner's Utopia Driver's License.",
   "credentialSubject": {
     "id": "did:example:12347abcd",
+    "type": "LicensedDriver",
     "driversLicense": {
       "type": "Iso18013DriversLicense",
       "document_number": "542426814",
