Add context additions to data model.

--- a/index.html
+++ b/index.html
@@ -424,6 +424,16 @@ Licenses.
           <td>Signature / usual mark</td>
           <td>Image of the signature or usual mark of the mDL Holder.</td>
           <td><a href="http://www.w3.org/2001/XMLSchema#base64Binary">Base 64</a></td>
+          </tr><tr>
+          <td>terseStatusListBaseUrl</td>
+          <td>Terse Status List Base URL</td>
+          <td>The base URL location of a status list.</td>
+          <td>URL</td>
+          </tr><tr>
+          <td>terseStatusListIndex</td>
+          <td>Terse Status List Index</td>
+          <td>An index within a status list.</td>
+          <td><a href="http://www.w3.org/2001/XMLSchema#unsignedInt">32 bits unsigned integer number</a></td>
           </tr>
         </tbody>
       </table>
